objects/Account.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Business_Tax_Return_EPC__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the date of most recent Eligible Passive Company (EPC) Tax Return. EPC is also known as real estate holding company. It is not needed if there is no EPC involvement.</description>
        <label>Business Tax Return (EPC)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Business_Tax_Return_OC__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the date of most recent Operating Company (OC) Business Tax Return.</description>
        <label>Business Tax Return (OC)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CIF__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the CIF number for the relationship.</description>
        <label>Customer Relationship Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Comments__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is a long text field used for comments regarding Relationship or Account. It is available for notes or comments about the Relationship or Account.</description>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Committed_Affiliated_Exposure__c</fullName>
        <description>This optional field automatically populates via the system with a value based on the configuration of Relationship Statistics. This field is used to report Committed Affiliated Exposure to this Relationship or Account.</description>
        <label>Committed Affiliated Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Committed_Direct_Exposure__c</fullName>
        <description>This field is optional. It is automatically populated with a value based on the configuration of Relationship Statistics. This field is used to report Committed Direct Exposure to this Relationship or Account.</description>
        <inlineHelpText>Committed Direct Exposure</inlineHelpText>
        <label>Committed Direct Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Committed_Indirect_Exposure__c</fullName>
        <description>This field is optional. It is automatically populated with a value based on the configuration of Relationship Statistics. This field is used to report Committed Direct Exposure to this Relationship or Account.</description>
        <inlineHelpText>Committed Indirect Exposure</inlineHelpText>
        <label>Committed Indirect Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Connection_Identifier__c</fullName>
        <description>This field is optional. It is populated automatically. This field is a text field and is used as an external ID. This specifies any connection that exists between accounts.</description>
        <externalId>true</externalId>
        <label>Connection Identifier</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Credit_Rating__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This text field is used to specify the Credit Rating of the Relationship.</description>
        <label>Credit Rating</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Credit_Stats__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This text field is used to specify the overall Credit Statistics for the Relationship/Account.</description>
        <label>Credit Stats</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Current_Situation__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is a long text field used as a text description of current situation of this Relationship or Account.</description>
        <label>Current Situation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CustomerPriority__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the priority associated with this Relationship or Account, for example, High, Medium, or Low. The value provided must match one of the values in the Customer Priority list established for this organization.</description>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__DONOTPACKAGE_GeoField__c</fullName>
        <description>--DEPRECATED-- This field is optional.  Geolocation field required for a test case. For testing only.</description>
        <label>-D TESTING ONLY - Test GeoField</label>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DSC_Post_OC__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to demonstrate the business&apos; ability to pay its monthly debt service, after Officer Compensation is paid. It is calculated automatically. DSC (post OC) = (NOI less OC)/Debt Service.</description>
        <label>DSC (Post OC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DSC_Pre_OC__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to demonstrate the business&apos; ability to pay its monthly debt service, before Officer Compensation is paid. Calculated automatically. DSC (pre OC) = (NOI)/Debt Service.</description>
        <label>DSC (Pre OC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Debt_Service_Coverage__c</fullName>
        <description>The debt service coverage ratio of the account.</description>
        <label>Debt Service Coverage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Debt_Service__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is optional. It is populated by a user or a data integration and calculated via trigger. It details the total monthly debt service from loans this institution has made to this Relationship or Account.</description>
        <label>Debt Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Default_App__c</fullName>
        <defaultValue>&apos;relationship.relationship-loan-products&apos;</defaultValue>
        <description>This field is optional. The value is set by an administrator. This field determines the default page within the nCino User Interface for this record.</description>
        <inlineHelpText>This field determines the default page within the nCino User Interface for this record.</inlineHelpText>
        <label>Default App</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Direct_Exposure__c</fullName>
        <description>This field is optional. It is automatically populated with a value based on the configuration of Relationship Statistics. This field is used to report Direct Exposure to this Relationship or Account.</description>
        <inlineHelpText>Direct Exposure</inlineHelpText>
        <label>Direct Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Doing_Business_As__c</fullName>
        <description>This field is not required. This field is manually populated. This field is used to store a Sole Proprietor&apos;s business name if it is different than the customer&apos;s name.</description>
        <label>Doing Business As</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Duns_Number__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. The DUNS number is utilized in lieu of the Data.com field.</description>
        <inlineHelpText>DUNS number utilized in lieu of Data.com field</inlineHelpText>
        <label>D-U-N-S Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Employee_Relationship__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It is manually populated by a user. When the value of the field is set to true, the sharing setting of this Relationship is affected to restrict read/write access. This field is used as an indicator if the relationship is an employee. If selected, the relationship is that of an employee of the financial institution.</description>
        <inlineHelpText>This box should be checked if the Relationship is an Employee of your Financial Institution</inlineHelpText>
        <label>Employee Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__EngagesInInternetGambling__c</fullName>
        <description>This field is optional and indicates whether a business engages in Internet gambling. This field&apos;s information can be collected during the New Customer Onboarding &amp; Deposit Application.</description>
        <label>Engages in Internet Gambling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Established_Country__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It is a description of the country in which the account holder was established if it was not established within the United States (applicable when the account holder is an entity).</description>
        <inlineHelpText>A description of the country in which the account holder was established if it was not established within the United States (applicable when the account holder is an entity).</inlineHelpText>
        <label>Established Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua &amp; Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas, The</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia &amp; Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Virgin Is.</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__FICO_Credit_Report__c</fullName>
        <description>This field is optional. It is populated automatically by the Credit Services integration. This field contains the ID of the credit report that was used to populate the other FICO fields.</description>
        <inlineHelpText>This field contains the ID of the credit report that was used to populate the other FICO fields.</inlineHelpText>
        <label>FICO Credit Report</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__FICO_Date__c</fullName>
        <description>This field is optional. It is populated automatically by the Credit Services integration. This field is used to specify the date of most recent FICO score inquiry.</description>
        <label>FICO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__FICO_Score__c</fullName>
        <description>This field is optional. It is populated automatically by the Credit Services integration. This field is used to specify the most recent FICO score.</description>
        <label>FICO Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__FICO_Source__c</fullName>
        <description>This field is optional. It is populated automatically by the Credit Services integration. This field indicates the source of the credit score information.</description>
        <inlineHelpText>This field indicated the source of the credit score information.</inlineHelpText>
        <label>FICO Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Facility__c</fullName>
        <description>This field is optional. It is chosen from a picklist by a user or a data integration. This field is used to show if the facility is owned or leased.</description>
        <inlineHelpText>Does this relationship currently Own or Lease their primary location?</inlineHelpText>
        <label>Facility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Owned</fullName>
                </value>
                <value>
                    <fullName>Leased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Filed_Trust__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Filed Trust</description>
        <inlineHelpText>This indicates whether the financial institution possesses a valid and up-to-date trust agreement for this trust account.</inlineHelpText>
        <label>Filed Trust</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Financials_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It is populated by a user or a data integration. This field is used as an indicator and reflects whether financials should not be automatically requested from Relationship or Account. If the checkbox is selected, do not request financials.</description>
        <label>Financials Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fiscal_Year_End__c</fullName>
        <description>This field is optional. It is populated when the user chooses a Fiscal Year End in spreads. In Spreads, this date is used to evaluate if 12 month periods are also fiscal years.</description>
        <label>Fiscal Year End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_Affiliated_NFFE__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It is the name of the publicly-traded NFFE corporation with which the beneficial owner is related by affiliation.</description>
        <inlineHelpText>The name of the publicly-traded NFFE corporation with which the beneficial owner is related by affiliation.</inlineHelpText>
        <label>Form W8 Affiliated NFFE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_Bankruptcy_Date__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It is the date the beneficial owner (non-financial entity) filed for liquidation or bankruptcy, as certified by IRS forms W-8.</description>
        <inlineHelpText>The date the beneficial owner (non-financial entity) filed for liquidation or bankruptcy, as certified by IRS forms W-8.</inlineHelpText>
        <label>Form W8 Bankruptcy Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_Disregarded_Entity_FFI_Type__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. If the account holder is a disregarded entity or branch of a disregarded entity that is a Foreign Financial Institution (FFI), enter the type of FFI (for purposes of IRS Forms W-8, e.g., form W-8BEN-E).</description>
        <inlineHelpText>If the account holder is a disregarded entity or branch of a disregarded entity that is a Foreign Financial Institution (FFI), enter the type of FFI (for purposes of IRS Forms W-8, e.g., form W-8BEN-E).</inlineHelpText>
        <label>Form W8 Disregarded Entity FFI Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nonparticipating FFI</fullName>
                </value>
                <value>
                    <fullName>Participating FFI</fullName>
                </value>
                <value>
                    <fullName>Reporting Model 1 FFI</fullName>
                </value>
                <value>
                    <fullName>Reporting Model 2 FFI</fullName>
                </value>
                <value>
                    <fullName>U.S. Branch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_FFI_Documentation_Type__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It indicates the type of documentation that the Owner-Documented Foreign Financial Institution (FFI) will provide (either an independent law firm&apos;s audit letter, or other alternative reporting statements), as prescribed by IRS forms W-8.</description>
        <inlineHelpText>Indicates type of documentation that the Owner-Documented Foreign Financial Institution (FFI) will provide (either an independent law firm&apos;s audit letter, or other alternative reporting statements), as prescribed by IRS forms W-8.</inlineHelpText>
        <label>Form W8 FFI Documentation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reporting Statement on Individual Primaries</fullName>
                </value>
                <value>
                    <fullName>Auditor&apos;s Letter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_IGA_Country__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It is the country with which the US has an intergovernmental agreement (IGA), under which the beneficial owner qualifies as a nonreporting foreign financial institution (FFI).</description>
        <inlineHelpText>The country with which the US has an intergovernmental agreement (IGA), under which the beneficial owner qualifies as a nonreporting foreign financial institution (FFI).</inlineHelpText>
        <label>Form W8 IGA Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_IGA_Entity_Description__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It is the applicable intergovernmental agreement&apos;s (IGA&apos;s) term/description for the type of entity that includes the beneficial owner.</description>
        <inlineHelpText>The applicable intergovernmental agreement&apos;s (IGA&apos;s) term/description for the type of entity that includes the beneficial owner.</inlineHelpText>
        <label>Form W8 IGA Entity Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_Model_2_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It is populated by a user or a data integration. The entity that is a &apos;Nonreporting IGA FFI&apos; is also treated as a registered deemed-compliant FFI under a &apos;Model 2&apos; IGA, as defined in Part XII of IRS form W-8BEN-E.</description>
        <inlineHelpText>The entity that is a &apos;Nonreporting IGA FFI&apos; is also treated as a registered deemed-compliant FFI under a &apos;Model 2&apos; IGA, as defined in Part XII of IRS form W-8BEN-E.</inlineHelpText>
        <label>Form W8 Model 2 Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_NFFE_Type__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It indicates whether the beneficial owner is the NFFE corporation in question, or the affiliate of said corporation, as prescribed and certified by IRS forms W-8.</description>
        <inlineHelpText>Indicates whether the beneficial owner is the NFFE corporation in question, or the affiliate of said corporation, as prescribed and certified by IRS forms W-8.</inlineHelpText>
        <label>Form W8 NFFE Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Publicly-Traded NFFE (not an affiliate)</fullName>
                </value>
                <value>
                    <fullName>Affiliate of Publicly-Traded NFFE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_Owner_Trust_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It is populated by a user or a data integration. It indicates the beneficial owner certifies it is an owner-documented FFI that is also a Trust without contingent or other unidentified beneficiaries, as prescribed by IRS forms W-8.</description>
        <inlineHelpText>Indicates the beneficial owner certifies it is an owner-documented FFI that is also a Trust without contingent or other unidentified beneficiaries, as prescribed by IRS forms W-8.</inlineHelpText>
        <label>Form W8 Owner Trust Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_Owner_Type__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It specifies the type of owner (or &apos;Chapter 3 Status&apos;) that is listed on the applicable IRS Form W-8 (e.g., W-8BEN-E, Certificate of Foreign Status of Beneficial Owner - Entity). Note that for several types there are two options distinguishing between hybri...</description>
        <inlineHelpText>Specifies the type of owner (or &apos;Chapter 3 Status&apos;) that is listed on the applicable IRS Form W-8.</inlineHelpText>
        <label>Form W8 Owner Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Disregarded Entity (non-hybrid)</fullName>
                </value>
                <value>
                    <fullName>Partnership (non-hybrid)</fullName>
                </value>
                <value>
                    <fullName>Simple Trust (non-hybrid)</fullName>
                </value>
                <value>
                    <fullName>Grantor Trust (non-hybrid)</fullName>
                </value>
                <value>
                    <fullName>Complex Trust</fullName>
                </value>
                <value>
                    <fullName>Estate</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Central Bank of Issue</fullName>
                </value>
                <value>
                    <fullName>Tax-exempt Organization</fullName>
                </value>
                <value>
                    <fullName>Private Foundation</fullName>
                </value>
                <value>
                    <fullName>Disregarded Entity (hybrid/treaty claim)</fullName>
                </value>
                <value>
                    <fullName>Partnership (hybrid/treaty claim)</fullName>
                </value>
                <value>
                    <fullName>Simple Trust (hybrid/treaty claim)</fullName>
                </value>
                <value>
                    <fullName>Grantor Trust (hybrid/treaty claim)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_Reference_Number_Description__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It describes any reference numbers that will be useful to the withholding agent while processing the W-8BEN (Certificate of Foreign Status of Beneficial Owner for United States Tax Withholding).</description>
        <inlineHelpText>Describes any reference numbers that will be useful to the withholding agent while processing the W-8BEN (Certificate of Foreign Status of Beneficial Owner for United States Tax Withholding).</inlineHelpText>
        <label>Form W8 Reference Number Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_Restricted_Distributor_Type__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It indicates the distribution agreement type for the Restricted Distributor, which must contain either (1) previous as well as current US sales prohibitions; or (2) only current US sales prohibitions coupled with preexisting account review, as the...</description>
        <inlineHelpText>Indicates type of distribution agreement type for the Restricted Distributor.</inlineHelpText>
        <label>Form W8 Restricted Distributor Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Previous and Current US Sales Prohibition</fullName>
                </value>
                <value>
                    <fullName>Current Prohibition Plus Preexisting Accounts Review Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_Security_Market_Name__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It contains the name of the securities market (or the name of one such securities market, if more than one) upon which the publicly-traded NFFE corporation&apos;s stock is regularly traded.</description>
        <inlineHelpText>The name of the securities market (or the name of one such securities market, if more than one) upon which the publicly-traded NFFE corporation&apos;s stock is regularly traded.</inlineHelpText>
        <label>Form W8 Security Market Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_Signer_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It is populated by a user or a data integration. It identifies an individual signer for a (non-US) entity who can (and will certify that they can) sign Forms W-8 on behalf of the entity.</description>
        <inlineHelpText>Identifies an individual signer for a (non-US) entity who can (and will certify that they can) sign Forms W-8 on behalf of the entity.</inlineHelpText>
        <label>Form W8 Signer Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_Special_Claim_Rate__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It designates the percentage rate of withholding on the specific type of income on the W-8BEN (Certificate of Foreign Status of Beneficial Owner for United States Tax Withholding).</description>
        <inlineHelpText>The percentage rate of withholding on the specific type of income on the W-8BEN (Certificate of Foreign Status of Beneficial Owner for United States Tax Withholding).</inlineHelpText>
        <label>Form W8 Special Claim Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_Special_Claim_Reason__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It describes the reason the owner meets the terms of the treaty article on the W-8BEN (Certificate of Foreign Status of Beneficial Owner for United States Tax Withholding).</description>
        <inlineHelpText>Describes the reason the owner meets the terms of the treaty article on the W-8BEN (Certificate of Foreign Status of Beneficial Owner for United States Tax Withholding).</inlineHelpText>
        <label>Form W8 Special Claim Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_Special_Income_Description__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It describes the type of income the owner is using to claim treaty benefits on the W-8BEN (Certificate of Foreign Status of Beneficial Owner for United States Tax Withholding).</description>
        <inlineHelpText>Describes the type of income the owner is using to claim treaty benefits on the W-8BEN (Certificate of Foreign Status of Beneficial Owner for United States Tax Withholding).</inlineHelpText>
        <label>Form W8 Special Income Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_Sponsor_Entity_Name__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It designates the name of the sponsoring entity for the beneficial owner that is one of the following: (a) a sponsored Foreign Financial Institution (FII) without a GIIN number, OR (b) a certified deemed- compliant closely held investment vehicle, or (c) a sponsored direct reporting NFFE, as these entities are defined by IRS forms W-8.</description>
        <inlineHelpText>The name of the sponsoring entity for the beneficial owner, these entities are defined by IRS forms W-8.</inlineHelpText>
        <label>Form W8 Sponsor Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>